[package]
name = "bevy_jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = { version = "0.8", features = ["render"] }
bevy = { version = "0.6", default-features = false, features = ["render", "png", "bevy_winit", "x11"] }
bytemuck = {version="1.7.3", features= ["derive"]}
ggrs = { version = "0.9", features=["sync-send"] }
bevy_ggrs = "0.9"
#bevy_ggrs = {path = "../bevy_ggrs"}
bevy_system_graph = "0.1"
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", features = ["ggrs-socket"] }
log = "0.4"
derive_more = "0.99"
bevy_ecs_ldtk = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ggrs = {  version = "0.9", features=["sync-send", "wasm-bindgen"]}
bevy_ggrs = { version = "0.9", features=["wasm-bindgen"]}
#bevy_ggrs = {path = "../bevy_ggrs", features=["wasm-bindgen"]}
bevy-web-resizer = "0.1.0"
web-sys = "0.3"